apps/argocd/argocd/http-route/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-app
  namespace: argocd
spec:
  hostnames:
  - argocd.apps.timgiertz.com
  parentRefs:
  - kind: Gateway
    name: shared-default-gateway
    namespace: default
    sectionName: shared-https
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80
    matches:	
      - path:	
          type: PathPrefix	
          value: /
